--- a/app/globals.css
+++ b/app/globals.css
@@ -58,6 +58,28 @@ body {
   font-family: var(--font-inter);
 }
 
+.banner1 {
+  background-image: url("/home/men-banner.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}
+
+.banner2 {
+  background-image: url("/home/women-banner.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}
+
+.text-outline {
+  -webkit-text-stroke: 3px white;
+}
+
 @layer base {
   button {
     @apply cursor-pointer;
