--- a/app/globals.css
+++ b/app/globals.css
@@ -76,6 +76,15 @@ body {
   height: 100%;
 }
 
+.banner3 {
+  background-image: url("/home/wide-banner.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}
+
 .text-outline {
   -webkit-text-stroke: 3px white;
 }
