--- a/app/globals.css
+++ b/app/globals.css
@@ -130,6 +130,24 @@ body {
   height: 100%;
 }
 
+.advert1 {
+  background-image: url("/home/advert1.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}
+
+.advert2 {
+  background-image: url("/home/advert2.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}
+
 .text-outline {
   -webkit-text-stroke: 3px white;
 }
