--- a/app/globals.css
+++ b/app/globals.css
@@ -148,6 +148,15 @@ body {
   height: 100%;
 }
 
+.shopBg {
+  background-image: url("/shop/shop-banner.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}
+
 .text-outline {
   -webkit-text-stroke: 3px white;
 }
@@ -156,9 +165,11 @@ body {
   button {
     @apply cursor-pointer;
   }
+
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
